# bewise

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/conf/: __init__.py  settings.py
app/endpoints/: __init__.py  dependencies.py
app/endpoints/api/v1/: problems.py
app/endpoints/crud/: __init__.py  problem_crud.py
app/endpoints/schemas/: __init__.py  problems.py
app/endpoints/utils/: problems_utils.py
app/pkg/postgres/: __init__.py  db.py  models.py
migration/: env.py
migration/versions/: 355ad182bef6_.py
